# lock-indicator

./: Cargo.toml  README.md  build.rs  embed_resources.exe.manifest  embed_resources.rc
src/: main.rs
