[package]
name = "lock-indicator"
version = "1.1.1"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
winapi = "0.3.9"

[dependencies.native-windows-gui]
version = "1.0.12"
features = [
    "no-styling",
    "embed-resource",
    "image-decoder",
]

[dependencies.native-windows-derive]
version = "1.0.3"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
embed-resource = "1.3"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"